2001-03-30  Bart Schaefer  <schaefer@zsh.org>

	* 13846: Test/ztst.zsh: When "make check" is run with output to a
	tty, print a hash mark approximately once per second during tests
	to provide a "progress bar".

	* 13845: Doc/Zsh/options.yo, Src/options.c: Refuse `setopt noexec'
	in interactive shells, except at startup with `zsh -n'.

2001-03-29  Peter Stephenson  <pws@csr.com>

	* 13838: Src/prompt.c: don't assume we can change the string
	returned by getsparam("HOST").

	* 13837: Src/builtin.c: disallow changing of parameter type
	for autoloadable parameter (bug 219459 on Sourceforge).

2001-03-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 13833: Completion/Core/_expand: fix comparison of expansions
	with expanded prefix (missing quoting)

	* 13830: Completion/Core/_multi_parts: next try to get rid of
	empty strings being added as possible completion by
	_multi_parts

2001-03-28  Bart Schaefer  <schaefer@zsh.org>

	* 12724: Doc/Zsh/builtins.yo: Nobody has come up with a better fix
	for the misformatted manual page than this hack, so I've finally
	committed it.

2001-03-28  Peter Stephenson  <pws@csr.com>

	* 13818: Doc/Zsh/zle.yo, Src/Zle/zle_keymap,c. Src/Zle/zle_main.c
	[zle_main hunk got omitted from posted patch, oops]: Add
	`bindkey -p' to list bindings with a given prefix.

	* unposted: Doc/Zsh/zle.yo, Doc/Zsh/mod_zle.yo: move ZLE builtin
	documentation from mod_zle.yo to zle.yo.

2001-03-28  Sven Wischnowsky  <wischnow@zsh.org>

	* Completion/Commands/_history_complete_word,
	13815: Doc/Zsh/compsys.yo: more cleanup; simplify the stop
	and liststyles; try to make it obey whatever _main_complete
	says should be done (menu-wise)

	* 13814: Completion/User/_urls, Doc/Zsh/compsys.yo: replace
	`path' with more general `urls' style

	* 13813: Completion/Core/_multi_parts: make sure _multi_parts
	doesn't add the empty string as a possible completion

2001-03-28  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Commands/_complete_tag: mysterious extra