@@ -1,3 +1,9 @@
+2001-03-30  Peter Stephenson  <pws@csr.com>
+
+	* 13851: Src/signals.c, Src/exec.c: don't exec final command in
+	in list if any traps are set, since we don't know whether we will
+	need to handle them when that command exits.
+
 2001-03-30  Bart Schaefer  <schaefer@zsh.org>
 
 	* 13846: Test/ztst.zsh: When "make check" is run with output to a
